			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02p: *********************************

IMP: (06/16/05, SMR) When GDS changes the library name, a warning is issued.

IMP: (06/16/05, SMR) Cleanup for Javadoc.

IMP: (06/16/05, GVG) Out check resolution moved from CIF I/O to DRC (Bug #362)
     Side effect: code in CIF.java commented out, left only CIF format resolution (Bug #365)

BUG: (06/16/05, DN) Bit "isParam" on NodeInst variables remains set even there
     is no more corresponing parameter on the parent Cell.
FIX: Don't store "isParam" bit on instance variables. Variable.isParam is claculated.

BUG: (06/16/05, DN) Factory preferences for text attributes are incorrect.
FIX: In TextDescriptor.DescriptorPref constructor cast "initialSize" to long.

BUG: (06/15/05, SMR) Busses and wires cause Schematic DRC when they cross (Bug #376).
FIX: In tool.drc.Schematic.checkPoly(), allow this combination to cross.

BUG: (06/15/05, DN) Show network problems (Bug #371)
FIX: In "NetworkTool.getNetworksOnPort" use "pi.getConnections".

IMP: (06/15/05, SMR) CIF output has no check for user resolution check, and always checks for
     minimum CIF format resolution (Bug #365).

IMP: (06/15/05, SMR) "Select Object" now allows multiple selections (for Frankie)(Bug #370)

IMP: (06/15/05, SMR) Conversion of a technology to a library twice now disallowed (for Gilda)(Bug #373)

IMP: (06/15/05, SMR) Technology editor handles stretching rules properly (for Gilda)(Bug #374)

BUG: (06/14/05, GVG) Select surround not working properly in hierarchy (Bug #353).
FIX: Precision problem while checking if point is at the corner of a rectangle.

IMP: (06/14/05, GVG) New tileNot layers (1 for each metal, OD and poly) in TSMC90 technology (Bug #354)
     Stipple patterns in such way they won't completely cover other tileNot nodes. The rest of the graphics